overlays/staging/istio/networking/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: staging-mtls
  namespace: staging
spec:
  mtls:
    mode: STRICT
