overlays/staging/istio/networking/dr-all-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: all-services-dr
  namespace: staging
spec:
  host: "*.staging.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
